# sonnet

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/sonnet/: __init__.py  checker.py  cli.py  config.py  forms.py  generator.py  interactive.py  meter.py  pdf.py  ranker.py  rhymes.py  syllables.py
tests/: __init__.py  test_checker.py  test_cli.py  test_config.py  test_forms.py  test_generator.py  test_integration.py  test_interactive.py  test_meter.py  test_pdf.py  test_ranker.py  test_rhymes.py  test_syllables.py
